@@ -9,7 +9,6 @@ var CloudCommander, Util, DOM, $, Github, cb;
         
         APIURL                          = '/api/v1',
         AuthURL                         = APIURL + '/auth',
-        GitHubIdURL                     = APIURL + '/github_key',
         
         GitHub_ID,
         GithubLocal,
@@ -103,7 +102,7 @@ var CloudCommander, Util, DOM, $, Github, cb;
         Util.exec(pCallBack);
     }
     
-    /* PUBLICK FUNCTIONS */
+    /* PUBLIC FUNCTIONS */
     GithubStore.basicLogin          = function(pUser, pPasswd){
         GithubLocal = new Github({
             username: pUser,
